--- a/blog.html
+++ b/blog.html
@@ -47,9 +47,9 @@
                                 </div>
                                 <div class="bg-white p-4">
                                     <div class="d-flex mb-2">
-                                        <a class="text-primary text-uppercase text-decoration-none" href="">Caio Ferreira</a>
+                                        <a class="text-primary text-uppercase text-decoration-none" onClick="alert('Temos 1 problema nesta página, aguarde nossos técnicos!')">Caio Ferreira</a>
                                         <span class="text-primary px-2">|</span>
-                                        <a class="text-primary text-uppercase text-decoration-none" href="">TURISMO EM PORTUGAL</a>
+                                        <a class="text-primary text-uppercase text-decoration-none" onClick="alert('Temos 1 problema nesta página, aguarde nossos técnicos!')">TURISMO EM PORTUGAL</a>
                                     </div>
                                     <a class="h5 m-0 text-decoration-none" href="single.html">O plano perfeito para turismo em Portugal!</a>
                                 </div>
@@ -59,14 +59,14 @@
                             <nav aria-label="Page navigation">
                                 <ul class="pagination pagination-lg justify-content-center bg-white mb-0" style="padding: 30px;">
                                   <li class="page-item disabled">
-                                    <a class="page-link" href="#" aria-label="Anterior">
+                                    <a class="page-link" onClick="alert('Temos 1 problema nesta página, aguarde nossos técnicos!')" aria-label="Anterior">
                                       <span aria-hidden="true">&laquo;</span>
                                       <span class="sr-only">Anterior</span>
                                     </a>
                                   </li>
-                                  <li class="page-item active"><a class="page-link" href="#">1</a></li>
+                                  <li class="page-item active"><a class="page-link" onClick="alert('Temos 1 problema nesta página, aguarde nossos técnicos!')">1</a></li>
                                   <li class="page-item">
-                                    <a class="page-link" href="#" aria-label="Próximo">
+                                    <a class="page-link" onClick="alert('Temos 1 problema nesta página, aguarde nossos técnicos!')" aria-label="Próximo">
                                       <span aria-hidden="true">&raquo;</span>
                                       <span class="sr-only">Próximo</span>
                                     </a>
@@ -98,7 +98,7 @@
                         <div class="bg-white" style="padding: 30px;">
                             <ul class="list-inline m-0">
                                 <li class="mb-3 d-flex justify-content-between align-items-center">
-                                    <a class="text-dark" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Turismo em Portugal</a>
+                                    <a class="text-dark" onClick="alert('Temos 1 problema nesta página, aguarde nossos técnicos!')"><i class="fa fa-angle-right text-primary mr-2"></i>Turismo em Portugal</a>
                                     <span class="badge badge-primary badge-pill">1</span>
                                 </li>
                             </ul>
@@ -108,7 +108,7 @@
                     <!-- Recent Post -->
                     <div class="mb-5">
                         <h4 class="text-uppercase mb-4" style="letter-spacing: 5px;">Publicações recentes</h4>
-                        <a class="d-flex align-items-center text-decoration-none bg-white mb-3" href="">
+                        <a class="d-flex align-items-center text-decoration-none bg-white mb-3" onClick="alert('Temos 1 problema nesta página, aguarde nossos técnicos!')">
                             <img class="img-fluid" src="img/blog-100x100.jpg" alt="">
                             <div class="pl-3">
                                 <h6 class="m-1">O plano perfeito para turismo em Portugal!</h6>
@@ -130,7 +130,7 @@
 
 
     <!-- Back to Top -->
-    <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="fa fa-angle-double-up"></i></a>
+    <a onClick="alert('Temos 1 problema nesta página, aguarde nossos técnicos!')" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="fa fa-angle-double-up"></i></a>
 
 
     <!-- JavaScript Libraries -->
