--- a/events.html
+++ b/events.html
@@ -46,7 +46,7 @@
                                     </div>
                                 </div>
                                 <div class="bg-white p-4">
-                                    <a class="h5 m-0 text-decoration-none" href="#">Planetiers World Gathering</a>
+                                    <a class="h5 m-0 text-decoration-none" onClick="alert('Temos 1 problema nesta página, aguarde nossos técnicos!')">Planetiers World Gathering</a>
                                     <div class="d-flex">
                                         <i class="fa-solid fa-location-dot mr-1"></i>
                                         <p class="text-primary text-uppercase text-decoration-none">Parque Eduardo VII</p>
@@ -68,7 +68,7 @@
                                     </div>
                                 </div>
                                 <div class="bg-white p-4">
-                                    <a class="h5 m-0 text-decoration-none" href="#">Cinanima</a>
+                                    <a class="h5 m-0 text-decoration-none" onClick="alert('Temos 1 problema nesta página, aguarde nossos técnicos!')">Cinanima</a>
                                     <div class="d-flex">
                                         <i class="fa-solid fa-location-dot mr-1"></i>
                                         <p class="text-primary text-uppercase text-decoration-none">Festival Internacional de Cinema de Animação</p>
@@ -90,7 +90,7 @@
                                     </div>
                                 </div>
                                 <div class="bg-white p-4">
-                                    <a class="h5 m-0 text-decoration-none" href="#">Guimarães Jazz</a>
+                                    <a class="h5 m-0 text-decoration-none" onClick="alert('Temos 1 problema nesta página, aguarde nossos técnicos!')">Guimarães Jazz</a>
                                     <div class="d-flex">
                                         <i class="fa-solid fa-location-dot mr-1"></i>
                                         <p class="text-primary text-uppercase text-decoration-none">Centro Cultural Vila Flor</p>
@@ -112,7 +112,7 @@
                                     </div>
                                 </div>
                                 <div class="bg-white p-4">
-                                    <a class="h5 m-0 text-decoration-none" href="#">Fim do Ano na Madeira</a>
+                                    <a class="h5 m-0 text-decoration-none" onClick="alert('Temos 1 problema nesta página, aguarde nossos técnicos!')">Fim do Ano na Madeira</a>
                                     <div class="d-flex">
                                         <i class="fa-solid fa-location-dot mr-1"></i>
                                         <p class="text-primary text-uppercase text-decoration-none">Funchal</p>
@@ -134,7 +134,7 @@
                                     </div>
                                 </div>
                                 <div class="bg-white p-4">
-                                    <a class="h5 m-0 text-decoration-none" href="#">Algarve Bike Challenge</a>
+                                    <a class="h5 m-0 text-decoration-none" onClick="alert('Temos 1 problema nesta página, aguarde nossos técnicos!')">Algarve Bike Challenge</a>
                                     <div class="d-flex">
                                         <i class="fa-solid fa-location-dot mr-1"></i>
                                         <p class="text-primary text-uppercase text-decoration-none">Algarve</p>
@@ -160,7 +160,7 @@
 
 
     <!-- Back to Top -->
-    <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="fa fa-angle-double-up"></i></a>
+    <a onClick="alert('Temos 1 problema nesta página, aguarde nossos técnicos!')" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="fa fa-angle-double-up"></i></a>
 
 
     <!-- JavaScript Libraries -->
