--- a/hotels.html
+++ b/hotels.html
@@ -42,7 +42,7 @@
                                     <img class="img-fluid w-100" src="img/359892106.jpg" alt="">
                                 </div>
                                 <div class="bg-white p-4">
-                                    <a class="h5 m-0 text-decoration-none" href="#">Lagos Atlantic Hotel</a>
+                                    <a class="h5 m-0 text-decoration-none" onClick="alert('Temos 1 problema nesta página, aguarde nossos técnicos!')">Lagos Atlantic Hotel</a>
                                     <div class="d-flex">
                                         <i class="fa-solid fa-location-dot mr-1"></i>
                                         <p class="text-primary text-uppercase text-decoration-none">Estrada do Monte Carapeto, nº 9, 8600-515 Lagos</p>
@@ -64,7 +64,7 @@
                                     <img class="img-fluid w-100" src="img/59027830.jpg" alt="">
                                 </div>
                                 <div class="bg-white p-4">
-                                    <a class="h5 m-0 text-decoration-none" href="#">Aqua Natura Madeira</a>
+                                    <a class="h5 m-0 text-decoration-none" onClick="alert('Temos 1 problema nesta página, aguarde nossos técnicos!')">Aqua Natura Madeira</a>
                                     <div class="d-flex">
                                         <i class="fa-solid fa-location-dot mr-1"></i>
                                         <p class="text-primary text-uppercase text-decoration-none">Rotunda Da Piscina Nº 3, 9270-156 Porto Moniz</p>
@@ -94,7 +94,7 @@
 
 
     <!-- Back to Top -->
-    <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="fa fa-angle-double-up"></i></a>
+    <a onClick="alert('Temos 1 problema nesta página, aguarde nossos técnicos!')" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="fa fa-angle-double-up"></i></a>
 
 
     <!-- JavaScript Libraries -->
