--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                   <img class="img-fluid" src="img/about-2.jpg" alt="" />
                 </div>
               </div>
-              <a href="" class="btn btn-primary mt-1"
+              <a onClick="alert('Temos 1 problema nesta página, aguarde nossos técnicos!')" class="btn btn-primary mt-1"
                 >Reservar já algum pack!</a
               >
             </div>
@@ -99,7 +99,7 @@
               <img class="img-fluid" src="img/destination-1.jpg" alt="" />
               <a
                 class="destination-overlay text-white text-decoration-none"
-                href=""
+                onClick="alert('Temos 1 problema nesta página, aguarde nossos técnicos!')"
               >
                 <h5 class="text-white">Estados Unidos da América</h5>
                 <span>49 Cidades</span>
@@ -113,7 +113,7 @@
               <img class="img-fluid" src="img/destination-2.jpg" alt="" />
               <a
                 class="destination-overlay text-white text-decoration-none"
-                href=""
+                onClick="alert('Temos 1 problema nesta página, aguarde nossos técnicos!')"
               >
                 <h5 class="text-white">Inglaterra</h5>
                 <span>29 Cidades</span>
@@ -127,7 +127,7 @@
               <img class="img-fluid" src="img/destination-3.jpg" alt="" />
               <a
                 class="destination-overlay text-white text-decoration-none"
-                href=""
+                onClick="alert('Temos 1 problema nesta página, aguarde nossos técnicos!')"
               >
                 <h5 class="text-white">Austrália</h5>
                 <span>34 Cidades</span>
@@ -141,7 +141,7 @@
               <img class="img-fluid" src="img/destination-4.jpg" alt="" />
               <a
                 class="destination-overlay text-white text-decoration-none"
-                href=""
+                onClick="alert('Temos 1 problema nesta página, aguarde nossos técnicos!')"
               >
                 <h5 class="text-white">Indía</h5>
                 <span>3 Cidades</span>
@@ -155,7 +155,7 @@
               <img class="img-fluid" src="img/destination-5.jpg" alt="" />
               <a
                 class="destination-overlay text-white text-decoration-none"
-                href=""
+                onClick="alert('Temos 1 problema nesta página, aguarde nossos técnicos!')"
               >
                 <h5 class="text-white">África do Sul</h5>
                 <span>7 Cidades</span>
@@ -169,7 +169,7 @@
               <img class="img-fluid" src="img/destination-6.jpg" alt="" />
               <a
                 class="destination-overlay text-white text-decoration-none"
-                href=""
+                onClick="alert('Temos 1 problema nesta página, aguarde nossos técnicos!')"
               >
                 <h5 class="text-white">Indonêsia</h5>
                 <span>14 Cidades</span>
@@ -257,7 +257,7 @@
                     pessoas</small
                   >
                 </div>
-                <a class="h5 text-decoration-none" href=""
+                <a class="h5 text-decoration-none" onClick="alert('Temos 1 problema nesta página, aguarde nossos técnicos!')"
                   >Anda por Nova Iorque como se não houvesse amanhã!</a
                 >
                 <div class="border-top mt-4 pt-4">
@@ -289,7 +289,7 @@
                     pessoas</small
                   >
                 </div>
-                <a class="h5 text-decoration-none" href=""
+                <a class="h5 text-decoration-none" onClick="alert('Temos 1 problema nesta página, aguarde nossos técnicos!')"
                   >Brinca com os teus amigos á brava!</a
                 >
                 <div class="border-top mt-4 pt-4">
@@ -321,7 +321,7 @@
                     pessoas</small
                   >
                 </div>
-                <a class="h5 text-decoration-none" href=""
+                <a class="h5 text-decoration-none" onClick="alert('Temos 1 problema nesta página, aguarde nossos técnicos!')"
                   >Água gelada mesmo do jeito que tu gostas!</a
                 >
                 <div class="border-top mt-4 pt-4">
@@ -353,7 +353,7 @@
                     pessoas</small
                   >
                 </div>
-                <a class="h5 text-decoration-none" href=""
+                <a class="h5 text-decoration-none" onClick="alert('Temos 1 problema nesta página, aguarde nossos técnicos!')"
                   >Nas melhores praias, quem não?</a
                 >
                 <div class="border-top mt-4 pt-4">
@@ -385,7 +385,7 @@
                     pessoas</small
                   >
                 </div>
-                <a class="h5 text-decoration-none" href=""
+                <a class="h5 text-decoration-none" onClick="alert('Temos 1 problema nesta página, aguarde nossos técnicos!')"
                   >Traz o teu corpo que vais gostar desta água!</a
                 >
                 <div class="border-top mt-4 pt-4">
@@ -417,7 +417,7 @@
                     pessoas</small
                   >
                 </div>
-                <a class="h5 text-decoration-none" href=""
+                <a class="h5 text-decoration-none" onClick="alert('Temos 1 problema nesta página, aguarde nossos técnicos!')"
                   >Aqui podes ficar o dia inteiro a relaxar!</a
                 >
                 <div class="border-top mt-4 pt-4">
@@ -451,13 +451,13 @@
               <div class="team-img position-relative overflow-hidden">
                 <img class="img-fluid w-100" src="img/team-2.jpg" alt="" />
                 <div class="team-social">
-                  <a class="btn btn-outline-primary btn-square" href=""
+                  <a class="btn btn-outline-primary btn-square" onClick="alert('Temos 1 problema nesta página, aguarde nossos técnicos!')"
                     ><i class="fab fa-twitter"></i
                   ></a>
-                  <a class="btn btn-outline-primary btn-square" href=""
+                  <a class="btn btn-outline-primary btn-square" onClick="alert('Temos 1 problema nesta página, aguarde nossos técnicos!')"
                     ><i class="fab fa-facebook-f"></i
                   ></a>
-                  <a class="btn btn-outline-primary btn-square" href=""
+                  <a class="btn btn-outline-primary btn-square" onClick="alert('Temos 1 problema nesta página, aguarde nossos técnicos!')"
                     ><i class="fab fa-instagram"></i
                   ></a>
                 </div>
@@ -473,13 +473,13 @@
               <div class="team-img position-relative overflow-hidden">
                 <img class="img-fluid w-100" src="img/team-4.jpg" alt="" />
                 <div class="team-social">
-                  <a class="btn btn-outline-primary btn-square" href=""
+                  <a class="btn btn-outline-primary btn-square" onClick="alert('Temos 1 problema nesta página, aguarde nossos técnicos!')"
                     ><i class="fab fa-twitter"></i
                   ></a>
-                  <a class="btn btn-outline-primary btn-square" href=""
+                  <a class="btn btn-outline-primary btn-square" onClick="alert('Temos 1 problema nesta página, aguarde nossos técnicos!')"
                     ><i class="fab fa-facebook-f"></i
                   ></a>
-                  <a class="btn btn-outline-primary btn-square" href=""
+                  <a class="btn btn-outline-primary btn-square" onClick="alert('Temos 1 problema nesta página, aguarde nossos técnicos!')"
                     ><i class="fab fa-instagram"></i
                   ></a>
                 </div>
@@ -518,13 +518,13 @@
                 <div class="d-flex mb-2">
                   <a
                     class="text-primary text-uppercase text-decoration-none"
-                    href=""
+                    onClick="alert('Temos 1 problema nesta página, aguarde nossos técnicos!')"
                     >Caio Ferreira</a
                   >
                   <span class="text-primary px-2">|</span>
                   <a
                     class="text-primary text-uppercase text-decoration-none"
-                    href=""
+                    onClick="alert('Temos 1 problema nesta página, aguarde nossos técnicos!')"
                     >Turismo em Portugal</a
                   >
                 </div>
@@ -541,7 +541,7 @@
     <div id="footer-placeholder"></div>
 
     <!-- Back to Top -->
-    <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"
+    <a onClick="alert('Temos 1 problema nesta página, aguarde nossos técnicos!')" class="btn btn-lg btn-primary btn-lg-square back-to-top"
       ><i class="fa fa-angle-double-up"></i
     ></a>
 
