--- a/single.html
+++ b/single.html
@@ -57,13 +57,13 @@
                 <div class="d-flex mb-3">
                   <a
                     class="text-primary text-uppercase text-decoration-none"
-                    href=""
+                    onClick="alert('Temos 1 problema nesta página, aguarde nossos técnicos!')"
                     >Caio Ferreira</a
                   >
                   <span class="text-primary px-2">|</span>
                   <a
                     class="text-primary text-uppercase text-decoration-none"
-                    href=""
+                    onClick="alert('Temos 1 problema nesta página, aguarde nossos técnicos!')"
                     >Turismo em Portugal</a
                   >
                 </div>
@@ -351,16 +351,16 @@
                 na cabeça!
               </p>
               <div class="d-flex justify-content-center">
-                <a class="text-primary px-2" href="">
+                <a class="text-primary px-2" onClick="alert('Temos 1 problema nesta página, aguarde nossos técnicos!')">
                   <i class="fab fa-facebook-f"></i>
                 </a>
-                <a class="text-primary px-2" href="">
+                <a class="text-primary px-2" onClick="alert('Temos 1 problema nesta página, aguarde nossos técnicos!')">
                   <i class="fab fa-twitter"></i>
                 </a>
-                <a class="text-primary px-2" href="">
+                <a class="text-primary px-2" onClick="alert('Temos 1 problema nesta página, aguarde nossos técnicos!')">
                   <i class="fab fa-instagram"></i>
                 </a>
-                <a class="text-primary px-2" href="">
+                <a class="text-primary px-2" onClick="alert('Temos 1 problema nesta página, aguarde nossos técnicos!')">
                   <i class="fab fa-youtube"></i>
                 </a>
               </div>
@@ -395,7 +395,7 @@
                   <li
                     class="mb-3 d-flex justify-content-between align-items-center"
                   >
-                    <a class="text-dark" href="#"
+                    <a class="text-dark" onClick="alert('Temos 1 problema nesta página, aguarde nossos técnicos!')"
                       ><i class="fa fa-angle-right text-primary mr-2"></i
                       >Turismo em Portugal</a
                     >
@@ -412,7 +412,7 @@
               </h4>
               <a
                 class="d-flex align-items-center text-decoration-none bg-white mb-3"
-                href=""
+                onClick="alert('Temos 1 problema nesta página, aguarde nossos técnicos!')"
               >
                 <img class="img-fluid" src="img/blog-100x100.jpg" alt="" />
                 <div class="pl-3">
@@ -434,7 +434,7 @@
     <!-- Footer End -->
 
     <!-- Back to Top -->
-    <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"
+    <a onClick="alert('Temos 1 problema nesta página, aguarde nossos técnicos!')" class="btn btn-lg btn-primary btn-lg-square back-to-top"
       ><i class="fa fa-angle-double-up"></i
     ></a>
 
