--- a/footer.html
+++ b/footer.html
@@ -24,9 +24,9 @@
             <p><i class="fa fa-envelope mr-2"></i>contacto@imperioturismo.com</p>
             <h6 class="text-white text-uppercase mt-4 mb-3" style="letter-spacing: 5px;">Segue-nos!</h6>
             <div class="d-flex justify-content-start">
-                <a class="btn btn-outline-primary btn-square mr-2" href="#"><i class="fab fa-twitter"></i></a>
-                <a class="btn btn-outline-primary btn-square mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                <a class="btn btn-outline-primary btn-square" href="#"><i class="fab fa-instagram"></i></a>
+                <a class="btn btn-outline-primary btn-square mr-2" onClick="alert('Temos 1 problema nesta página, aguarde nossos técnicos!')"><i class="fab fa-twitter"></i></a>
+                <a class="btn btn-outline-primary btn-square mr-2" onClick="alert('Temos 1 problema nesta página, aguarde nossos técnicos!')"><i class="fab fa-facebook-f"></i></a>
+                <a class="btn btn-outline-primary btn-square" onClick="alert('Temos 1 problema nesta página, aguarde nossos técnicos!')"><i class="fab fa-instagram"></i></a>
             </div>
         </div>
     </div>
