--- a/navbar.html
+++ b/navbar.html
@@ -8,16 +8,16 @@
       </div>
       <div class="col-lg-6 text-center text-lg-right">
         <div class="d-inline-flex align-items-center">
-          <a class="text-primary px-3" href="">
+          <a class="text-primary px-3" onClick="alert('Temos 1 problema nesta página, aguarde nossos técnicos!')">
             <i class="fab fa-facebook-f"></i>
           </a>
-          <a class="text-primary px-3" href="">
+          <a class="text-primary px-3" onClick="alert('Temos 1 problema nesta página, aguarde nossos técnicos!')">
             <i class="fab fa-twitter"></i>
           </a>
-          <a class="text-primary px-3" href="">
+          <a class="text-primary px-3" onClick="alert('Temos 1 problema nesta página, aguarde nossos técnicos!')">
             <i class="fab fa-instagram"></i>
           </a>
-          <a class="text-primary pl-3" href="">
+          <a class="text-primary pl-3" onClick="alert('Temos 1 problema nesta página, aguarde nossos técnicos!')">
             <i class="fab fa-youtube"></i>
           </a>
         </div>
@@ -77,7 +77,7 @@
             <h1 class="display-3 text-white mb-md-4">
               Entre na nossa aventura turística!
             </h1>
-            <a href="" class="btn btn-primary py-md-3 px-md-5 mt-2">Reservar Agora</a>
+            <a onClick="alert('Temos 1 problema nesta página, aguarde nossos técnicos!')" class="btn btn-primary py-md-3 px-md-5 mt-2">Reservar Agora</a>
           </div>
         </div>
       </div>
@@ -90,7 +90,7 @@
             <h1 class="display-3 text-white mb-md-4">
               Juntos o espírito é melhor!
             </h1>
-            <a href="" class="btn btn-primary py-md-3 px-md-5 mt-2">Reservar Agora</a>
+            <a onClick="alert('Temos 1 problema nesta página, aguarde nossos técnicos!')" class="btn btn-primary py-md-3 px-md-5 mt-2">Reservar Agora</a>
           </div>
         </div>
       </div>
