--- a/package.html
+++ b/package.html
@@ -58,7 +58,7 @@
                     pessoas</small
                   >
                 </div>
-                <a class="h5 text-decoration-none" href=""
+                <a class="h5 text-decoration-none" onClick="alert('Temos 1 problema nesta página, aguarde nossos técnicos!')"
                   >Anda por Nova Iorque como se não houvesse amanhã!</a
                 >
                 <div class="border-top mt-4 pt-4">
@@ -90,7 +90,7 @@
                     pessoas</small
                   >
                 </div>
-                <a class="h5 text-decoration-none" href=""
+                <a class="h5 text-decoration-none" onClick="alert('Temos 1 problema nesta página, aguarde nossos técnicos!')"
                   >Brinca com os teus amigos á brava!</a
                 >
                 <div class="border-top mt-4 pt-4">
@@ -122,7 +122,7 @@
                     pessoas</small
                   >
                 </div>
-                <a class="h5 text-decoration-none" href=""
+                <a class="h5 text-decoration-none" onClick="alert('Temos 1 problema nesta página, aguarde nossos técnicos!')"
                   >Água gelada mesmo do jeito que tu gostas!</a
                 >
                 <div class="border-top mt-4 pt-4">
@@ -154,7 +154,7 @@
                     pessoas</small
                   >
                 </div>
-                <a class="h5 text-decoration-none" href=""
+                <a class="h5 text-decoration-none" onClick="alert('Temos 1 problema nesta página, aguarde nossos técnicos!')"
                   >Nas melhores praias, quem não?</a
                 >
                 <div class="border-top mt-4 pt-4">
@@ -186,7 +186,7 @@
                     pessoas</small
                   >
                 </div>
-                <a class="h5 text-decoration-none" href=""
+                <a class="h5 text-decoration-none" onClick="alert('Temos 1 problema nesta página, aguarde nossos técnicos!')"
                   >Traz o teu corpo que vais gostar desta água!</a
                 >
                 <div class="border-top mt-4 pt-4">
@@ -218,7 +218,7 @@
                     pessoas</small
                   >
                 </div>
-                <a class="h5 text-decoration-none" href=""
+                <a class="h5 text-decoration-none" onClick="alert('Temos 1 problema nesta página, aguarde nossos técnicos!')"
                   >Aqui podes ficar o dia inteiro a relaxar!</a
                 >
                 <div class="border-top mt-4 pt-4">
@@ -255,7 +255,7 @@
                 <img class="img-fluid" src="img/destination-1.jpg" alt="" />
                 <a
                   class="destination-overlay text-white text-decoration-none"
-                  href=""
+                  onClick="alert('Temos 1 problema nesta página, aguarde nossos técnicos!')"
                 >
                   <h5 class="text-white">Estados Unidos da América</h5>
                   <span>49 Cidades</span>
@@ -269,7 +269,7 @@
                 <img class="img-fluid" src="img/destination-2.jpg" alt="" />
                 <a
                   class="destination-overlay text-white text-decoration-none"
-                  href=""
+                  onClick="alert('Temos 1 problema nesta página, aguarde nossos técnicos!')"
                 >
                   <h5 class="text-white">Inglaterra</h5>
                   <span>29 Cidades</span>
@@ -283,7 +283,7 @@
                 <img class="img-fluid" src="img/destination-3.jpg" alt="" />
                 <a
                   class="destination-overlay text-white text-decoration-none"
-                  href=""
+                  onClick="alert('Temos 1 problema nesta página, aguarde nossos técnicos!')"
                 >
                   <h5 class="text-white">Austrália</h5>
                   <span>34 Cidades</span>
@@ -297,7 +297,7 @@
                 <img class="img-fluid" src="img/destination-4.jpg" alt="" />
                 <a
                   class="destination-overlay text-white text-decoration-none"
-                  href=""
+                  onClick="alert('Temos 1 problema nesta página, aguarde nossos técnicos!')"
                 >
                   <h5 class="text-white">Indía</h5>
                   <span>3 Cidades</span>
@@ -311,7 +311,7 @@
                 <img class="img-fluid" src="img/destination-5.jpg" alt="" />
                 <a
                   class="destination-overlay text-white text-decoration-none"
-                  href=""
+                  onClick="alert('Temos 1 problema nesta página, aguarde nossos técnicos!')"
                 >
                   <h5 class="text-white">África do Sul</h5>
                   <span>7 Cidades</span>
@@ -325,7 +325,7 @@
                 <img class="img-fluid" src="img/destination-6.jpg" alt="" />
                 <a
                   class="destination-overlay text-white text-decoration-none"
-                  href=""
+                  onClick="alert('Temos 1 problema nesta página, aguarde nossos técnicos!')"
                 >
                   <h5 class="text-white">Indonêsia</h5>
                   <span>14 Cidades</span>
@@ -344,7 +344,7 @@
 
 
     <!-- Back to Top -->
-    <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="fa fa-angle-double-up"></i></a>
+    <a onClick="alert('Temos 1 problema nesta página, aguarde nossos técnicos!')" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="fa fa-angle-double-up"></i></a>
 
 
     <!-- JavaScript Libraries -->
